--- a/maket_my_m2/css/style.css
+++ b/maket_my_m2/css/style.css
@@ -6,3 +6,144 @@ body {
     line-height: 150%;
     color: #fff;
 }
+
+.container {
+    max-width: 930px;
+    margin: 0 auto;
+    padding: 0 15px;
+    height: 100%;
+}
+
+/* ================== */
+
+.header {
+    padding: 30px 0 30px;
+}
+
+.header-inner {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.header-nav {
+    margin-left: auto;
+}
+
+.header-list {
+    display: flex;
+}
+
+.header-item {
+    margin-right: 30px;
+}
+
+.header-button {
+    background-color: #fff;
+    border-radius: 100px;
+    color: #2766AE;
+    padding: 14px 30px;
+    font-weight: 500;
+}
+
+/* MAIN=============== */
+
+.hero {
+    padding: 120px 0px;
+    background: url(../img/hero-bg1.jpg) 10% 50% / cover no-repeat;
+}
+
+.hero-title {
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 49px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.hero-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.hero-text {
+    max-width: 436px
+}
+
+.hero-text span {
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #01a2cb;
+}
+
+.p1 {
+    margin-bottom: 15px;
+}
+
+.hero-buttons {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 320px;
+}
+
+.hero-butom-1,
+.hero-butom-2 {
+    display: flex;
+    justify-content: center;
+    border-radius: 100px;
+    padding: 18px 30px;
+}
+
+.hero-butom-1 {
+    background: linear-gradient(180deg, #00a4cc 0%, #2766ae 100%);
+    margin-bottom: 10px;
+}
+
+.hero-butom-2 {
+    background: linear-gradient(129deg, #00a4cc 0%, #2766ae 100%);
+}
+
+.hero-butom-2 img {
+    margin-left: 4px;
+}
+
+.cards {
+    padding-top: 120px;
+}
+
+.cards-title {
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 49px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.cards-text {
+    text-align: center;
+    max-width: 513px;
+    /* line-height: 48px; */
+    margin: 0px auto 60px;
+}
+
+.cards-flex {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+    margin-left: -14px;
+    margin-bottom: -28px;
+}
+
+
+.cards-flex-item {
+    display: flex;
+    flex-flow: column;
+    background: #176BAE;
+    border-radius: 16px;
+    padding: 28px;
+}
+
