--- a/maket_my_m2/css/style.css
+++ b/maket_my_m2/css/style.css
@@ -110,8 +110,11 @@ body {
     margin-left: 4px;
 }
 
+/* ================================== */
+
+
 .cards {
-    padding-top: 120px;
+    padding: 120px 0;
 }
 
 .cards-title {
@@ -123,7 +126,7 @@ body {
     margin-bottom: 15px;
 }
 
-.cards-text {
+.cards-flex-text {
     text-align: center;
     max-width: 513px;
     /* line-height: 48px; */
@@ -133,26 +136,95 @@ body {
 .cards-flex {
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 30px;
-    /* padding-left: 14px; */
-    margin-left: 14px;
+    margin-left: -14px;
     margin-bottom: -28px;
+    padding-bottom: 30px;
 }
 
 .cards-flex-item {
-    flex: 0 0 25%;
     padding: 0 14px;
     margin-bottom: 28px;
+    flex: 0 0 25%;
 }
 
 .cards-flex-inner {
-    display: flex;
-    flex-flow: column;
-    box-shadow: 4px 4px 13px 0 rgba(5, 13, 41, 0.76);
+    /* display: flex; */
+    /* flex-flow: column; */
     background: #197cb8;
     /* background: #176BAE; */
     border: 2px solid #176bae;
     border-radius: 16px;
-    padding: 28px;
+    box-shadow: 4px 4px 13px 0 rgba(5, 13, 41, 0.76);
+    padding: 28px 14px;
 
+}
+
+.cards-flex-title {
+    text-align: center;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.cards-flex-text {
+    text-align: center;
+    /* margin-bottom: 60px; */
+}
+
+.card-flex-buttom {
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    display: block;
+    text-align: center;
+    border-radius: 100px;
+    padding: 18px 30px;
+    max-width: 436px;
+    /* height: 56px; */
+    background: linear-gradient(180deg, #00a4cc 0%, #2766ae 100%);
+    margin: 0px auto;
+}
+
+/* FOOTER======================== */
+
+.footer {
+    /* border-top: 1px solid #323952; */
+    padding: 60px 0;
+}
+
+.footer-inner {
+    display: flex;
+}
+
+.footer-desc {
+    max-width: 267px;
+    margin-right: auto;
+}
+
+.footer-desc img {
+    margin-bottom: 15px;
+}
+
+.footer-nav-marg {
+    margin-right: 28px;
+}
+
+.footer-title {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    line-height: 27px;
+}
+
+.footer-nav {
+    max-width: 115px;
+    width: 100%;
+}
+
+.footer-item {
+    padding-bottom: 10px;
 }
