--- a/maket_my_m2/css/style.css
+++ b/maket_my_m2/css/style.css
@@ -190,7 +190,7 @@ body {
 /* FOOTER======================== */
 
 .footer {
-    /* border-top: 1px solid #323952; */
+    border-top: 1px solid #323952;
     padding: 60px 0;
 }
 
