--- a/homework_les68_m2/css/style.css
+++ b/homework_les68_m2/css/style.css
@@ -8,27 +8,33 @@ p {
     color: white;
 }
 
-.figure {
-    /* display: flex; */
-    position: fixed;
-    left: 50%;
-    bottom: 10px;
-}
 
 .rectangle {
-    border: box;
     max-width: 100%;
     height: 100px;
+    border-radius: 10px;
     background: white;
-    /* position: absolute; */
-    /* left: 50%; */
-    /* bottom: 10px; */
 }
 
 .circle {
-    border: box;
     width: 100px;
     height: 100px;
+    bottom: 100px;
     border-radius: 50%;
     background: red;
+}
+
+/* Позиционирование фигур */
+
+.rectangle {
+    position: fixed;
+    left: 50%;
+    right: 50px;
+    bottom: 100px;
+}
+
+.circle {
+    position: absolute;
+    bottom: 50%;
+    left: 100px;
 }
