--- a/lesson75_m2/css/style.css
+++ b/lesson75_m2/css/style.css
@@ -32,4 +32,74 @@ body {
 
 .grid-1 {
     display: grid;
+    grid-template: repeat(2, 2fr) / 1fr 2fr repeat(3, 1fr);
+    /* grid-template-columns: 1fr auto 1fr; */
+    /* grid-template-columns: .1fr .3fr .2fr; */
+    /* grid-template-rows:  150px 350px; */
+    /* grid-template: 200px 200px / repeat(3, 1fr); */
+}
+
+.grid-3 {
+    /* неявные сетки */
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto); */
+
+    /* grid-auto-columns: auto;
+    grid-auto-rows: 400px; */
+
+    /* grid-auto-flow: column;
+    grid-auto-columns: auto;
+    grid-auto-rows: 400px; */
+
+}
+
+.grid-1 {
+    /* Выравнивание ГРИД */
+    display: grid;
+
+    /* grid-template: 200px 200px / repeat(3, 1fr); */
+    /* justify-items: center;
+    align-items: center; */
+    /* height: 800px; */
+    /* gap: 100px 10%; */
+}
+
+.grid-4 {
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+}
+
+.grid-4__item--1 {
+    /* grid-row-start: auto;
+    grid-row-end: auto;
+    grid-column-start: auto;
+    grid-column-end: auto; */
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+    order: 1;
+}
+
+.grid-4__item--2 {
+    order: 4;
+}
+
+.grid-4__item--3 {
+    /* grid-column: 2 / -1; */
+    order: 7;
+}
+
+.grid-4__item--4 {
+    order: 2;
+}
+
+.grid-4__item--5 {
+    /* grid-row-start: 2; */
+    /* grid-row-end: 4; */
+    /* grid-column-start: 3; */
+    order: 5;
+}
+
+.grid-4__item--6 {
+    order: 3;
 }
