--- a/maket_№3_Wake&Bake/css/fonts.css
+++ b/maket_№3_Wake&Bake/css/fonts.css
@@ -1,19 +1,18 @@
 @font-face {
     font-family: 'Gabriola';
     src: local('Gabriola'),
-        url('Gabriola.woff2') format('woff2'),
-        url('Gabriola.woff') format('woff');
+        url('../fonts/Gabriola.woff2') format('woff2'),
+        url('../fonts/Gabriola.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 
-
 @font-face {
     font-family: 'Montserrat';
     src: local('Montserrat Medium'), local('Montserrat-Medium'),
-        url('Montserrat-Medium.woff2') format('woff2'),
-        url('Montserrat-Medium.woff') format('woff');
+        url('../fonts/Montserrat-Medium.woff2') format('woff2'),
+        url('../fonts/Montserrat-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -22,8 +21,8 @@
 @font-face {
     font-family: 'Montserrat';
     src: local('Montserrat Regular'), local('Montserrat-Regular'),
-        url('Montserrat-Regular.woff2') format('woff2'),
-        url('Montserrat-Regular.woff') format('woff');
+        url('../fonts/Montserrat-Regular.woff2') format('woff2'),
+        url('../fonts/Montserrat-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
