--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -14,22 +14,6 @@
     --third-family: "Inspiration", sans-serif;
 }
 
-.button{
-    display: flex;
-    font-weight: 500;
-    line-height: 1.6;
-    align-items: center;
-    justify-content: center;
-    max-width: 358px;
-    height: 62px;
-    background: var(--color-ac-orange);
-    border-radius: 60px;
-}
-
-.button:hover{
-    background: #ff9138;
-    transition: all, 2s ;
-}
 
 /* ========================= */
 .body {
@@ -40,6 +24,10 @@
     /* font-weight: 400; Дефолтное значение */
     line-height: 1.5;
     color: var(--color-text);
+}
+
+.body--opened-menu {
+    overflow: hidden;
 }
 
 .wraper {
@@ -62,8 +50,27 @@
     line-height: 24px;
 }
 
+.button {
+    display: flex;
+    font-weight: 500;
+    line-height: 1.6;
+    align-items: center;
+    justify-content: center;
+    /* max-width: 358px; */
+    height: 62px;
+    background: var(--color-ac-orange);
+    border-radius: 60px;
+    padding: 3px 15px;
+}
 
-/* ++++++++++++++++++++++++++++++++++ */
+.button:hover {
+    background: #ff9138;
+    transition: all, .4s;
+}
+
+
+/* ========================================= */
+
 .header {
     position: relative;
     background: url("../img/decor/bg-header.png") 50% 100% / cover no-repeat;
@@ -87,19 +94,25 @@
 
 .header__logo {
     max-width: 174px;
+    z-index: 11;
+}
+
+.header__logo img {
+    width: 100%;
 }
 
 .header__nav {}
 
 .header__nav-list {
     display: flex;
-    gap: 40px;
+    gap: 4vh 40px;
 }
 
 .header__nav-link {
     display: block;
     padding: 5px 0;
     position: relative;
+    z-index: 1;
 }
 
 /* .header__nav-link:hover {} */
@@ -114,7 +127,7 @@
     width: 34px;
     height: 34px;
     border-radius: 50%;
-    transition: all, .4s; 
+    transition: all, .4s;
     opacity: 0;
 }
 
@@ -122,18 +135,73 @@
     opacity: 1
 }
 
-/* ======================== */
-.hero{
+.burger-icon {
+    display: none;
+    width: 50px;
+    height: 50px;
+    /* background: #1F1711; */
+    align-items: center;
+    justify-content: center;
+    z-index: 11;
+}
+
+.burger-icon span,
+.burger-icon span::before,
+.burger-icon span::after {
+    display: block;
+    width: 30px;
+    height: 3px;
+    border-radius: 100px;
+    background: var(--color-text);
+    transition: all, .4s;
+}
+
+.burger-icon span {
+    position: relative;
+}
+
+.burger-icon span::before,
+.burger-icon span::after {
+    content: '';
+    position: absolute;
+}
+
+.burger-icon span::before {
+    top: -8px;
+}
+
+.burger-icon span::after {
+    bottom: -8px;
+}
+
+.body--opened-menu .burger-icon span {
+    background: transparent;
+}
+
+.body--opened-menu .burger-icon span::before {
+    top: 0;
+    transform: rotate(45deg);
+}
+
+.body--opened-menu .burger-icon span::after {
+    bottom: 0;
+    transform: rotate(-45deg);
+}
+
+
+/* ================================================= */
+.hero {
     padding: 50px 0 140px;
 }
 
-.hero-inner{
+.hero-inner {
     display: flex;
-    /* justify-content: space-between; */
     align-items: flex-end;
+    justify-content: space-between;
+    gap: 30px;
 }
 
-.hero__content{
+.hero__content {
     /* display: flex; */
     /* flex-direction: column; */
     /* padding-right: 137px; */
@@ -141,7 +209,7 @@
     /* width: 100%; */
 }
 
-.hero__info{
+.hero__info {
     display: flex;
     flex-wrap: wrap;
     line-height: 1.6;
@@ -150,48 +218,154 @@
     margin-bottom: 20px;
 }
 
-.hero__info span{
+.hero__info span {
     display: flex;
     align-items: center;
 }
 
-.hero__info span::after{
+.hero__info span::after {
     content: '';
     background-color: #B197B2;
     width: 4px;
     height: 4px;
     border-radius: 50%;
     display: block;
-    margin:0 10px;
+    margin: 0 10px;
 }
 
-.hero__info span:last-child::after{
+.hero__info span:last-child::after {
     content: none;
 }
-.point{
+
+.point {
     background-color: #B197B2;
     width: 4px;
     height: 4px;
     border-radius: 50%;
 }
 
-.hero__title{
+.hero__title {
     font-family: var(--second-family);
     font-size: 74px;
     line-height: .82;
     margin-bottom: 30px;
 }
 
-.hero__text{
+.hero__text {
     margin-bottom: 40px;
+    max-width: 360px;
+}
+
+.hero__button {
     max-width: 358px;
 }
 
-.hero-img{
+.hero__img {
     /* padding-left: 137px; */
+    margin-right: 247px;
+    position: relative;
 }
 
-.hero__img-control{
+.hero__img>img {
+    max-width: 100%;
+}
+
+.hero__img-control {
+    display: flex;
+    gap: 10px;
+    position: absolute;
+    align-items: center;
+    left: calc(100% - 39px);
+    bottom: 11%;
+    max-width: 200px;
+    width: 100%;
+
+    /* translate: 39px -51px; */
+}
+
+.hero__img-button {
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-bg-button);
+    box-shadow: 0 4px 20px 0 rgba(184, 148, 126, 0.3);
+    width: 78px;
+    height: 78px;
+    border-radius: 50%;
     position: relative;
-    
+}
+
+.hero__img-button img {
+    padding-left: 8.8%;
+}
+
+.hero__img-button::before {
+    content: '';
+    position: absolute;
+    border: 1px solid var(--color-ac-orange);
+    inset: 5px;
+    border-radius: 50%;
+    opacity: 0;
+    transition: all, .4s;
+}
+
+.hero__img-button:hover::before {
+    opacity: 1;
+}
+
+
+/* ============================================================= */
+
+@media(max-width:1200px) {
+    .hero__img {
+        margin: 0;
+        max-width: 377px;
+    }
+
+    .hero__img-control {
+        position: static;
+        max-width: none;
+        margin-top: 30px;
+    }
+}
+
+@media(max-width:900px) {
+    .header__nav {
+        /* display: none; */
+        position: fixed;
+        inset: 0;
+        z-index: 10;
+        background: var(--color-bg-body);
+        padding: 26vh 15px 30px;
+        font-size: 24px;
+
+        transform: translateY(-50%);
+        opacity: 0;
+        visibility: hidden;
+        transition: all, .4s;
+    }
+
+    .header__nav-list {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .body--opened-menu .header__nav {
+        /* display: block; */
+        transform: translateY(0%);
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .burger-icon {
+        display: flex;
+    }
+
+}
+
+@media(max-width:800px) {
+    .hero__img{
+        display: none;
+    } 
 }
