--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -257,7 +257,8 @@
 }
 
 .hero__button {
-    max-width: 358px;
+    max-width: 360px;
+    width: 100%;
 }
 
 .hero__img {
@@ -279,8 +280,12 @@
     bottom: 11%;
     max-width: 200px;
     width: 100%;
-
+    text-align: left;
     /* translate: 39px -51px; */
+}
+
+.hero__img-control--mobile{
+    display: none;
 }
 
 .hero__img-button {
@@ -365,7 +370,31 @@
 }
 
 @media(max-width:800px) {
+    .hero__content{
+        max-width: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+    }
+
     .hero__img{
         display: none;
     } 
+
+    .hero__img-control--mobile{
+        display: flex;
+        margin: 0 0 30px;
+        width: auto;
+    }
+}
+
+@media(max-width:600px){
+    .hero{
+        padding-bottom: 80px;
+    }
+    .hero__title{
+        font-size: 12vw ;
+    }
 }
