--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -284,7 +284,7 @@
     /* translate: 39px -51px; */
 }
 
-.hero__img-control--mobile{
+.hero__img-control--mobile {
     display: none;
 }
 
@@ -319,6 +319,78 @@
     opacity: 1;
 }
 
+/* ============================================================= */
+
+
+
+
+
+/* -----footer----- */
+.footer {
+    padding-bottom: 60px;
+}
+
+.footer {
+    position: relative;
+    background: url("../img/decor/bg-footer.png") 50% 100% / cover no-repeat;
+    /* width: 100%; */
+}
+
+.footer__head-inner {
+    width: 1282px;
+    height: 522px;
+    display: flex;
+    padding: 127px 319px 137px;
+
+}
+
+.footer__head-inner .cake {
+    /* max-width: 574px; */
+}
+
+.footer__form {
+    max-width: 420px;
+}
+
+.footer__title {
+    font-family: var(--second-family);
+    font-size: 74px;
+    line-height: .82;
+    color: var(--color-bg-head);
+    padding-bottom: 20px;
+}
+
+.footer__text {
+    padding-bottom: 20px;
+}
+
+.form__input {
+    border: 1px solid var(--color-ac-orange);
+    border-radius: 100px;
+    padding: 19px 28px;
+    width: 420px;
+    height: 62px;
+    margin-bottom: 10px;
+    background-color: transparent;
+}
+
+.form__checkbox {
+    font-size: 13px;
+}
+
+.form__checkbox-link {
+    text-decoration: underline;
+    text-decoration-skip-ink: auto;
+}
+
+.form__form:last-child {
+    margin-bottom: 20px;
+}
+
+
+.footer__button {
+    /* max-width: 420px; */
+}
 
 /* ============================================================= */
 
@@ -370,7 +442,7 @@
 }
 
 @media(max-width:800px) {
-    .hero__content{
+    .hero__content {
         max-width: none;
         display: flex;
         flex-direction: column;
@@ -379,22 +451,23 @@
         width: 100%;
     }
 
-    .hero__img{
+    .hero__img {
         display: none;
-    } 
+    }
 
-    .hero__img-control--mobile{
+    .hero__img-control--mobile {
         display: flex;
         margin: 0 0 30px;
         width: auto;
     }
 }
 
-@media(max-width:600px){
-    .hero{
+@media(max-width:600px) {
+    .hero {
         padding-bottom: 80px;
     }
-    .hero__title{
-        font-size: 12vw ;
+
+    .hero__title {
+        font-size: 12vw;
     }
 }
