--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -12,6 +12,8 @@
     --font-family: "Montserrat", sans-serif;
     --second-family: "Gabriola", sans-serif;
     --third-family: "Inspiration", sans-serif;
+
+    --transition: all .4s;
 }
 
 
@@ -65,7 +67,7 @@
 
 .button:hover {
     background: #ff9138;
-    transition: all, .4s;
+    transition: var(--transition);
 }
 
 
@@ -127,7 +129,7 @@
     width: 34px;
     height: 34px;
     border-radius: 50%;
-    transition: all, .4s;
+    transition: var(--transition);
     opacity: 0;
 }
 
@@ -153,7 +155,7 @@
     height: 3px;
     border-radius: 100px;
     background: var(--color-text);
-    transition: all, .4s;
+    transition: var(--transition);
 }
 
 .burger-icon span {
@@ -312,7 +314,7 @@
     inset: 5px;
     border-radius: 50%;
     opacity: 0;
-    transition: all, .4s;
+    transition: var(--transition);
 }
 
 .hero__img-button:hover::before {
@@ -325,18 +327,18 @@
 
 
 
-/* -----footer----- */
-.footer {
+/* -----main__bottom----- */
+.main__bottom {
     padding-bottom: 60px;
 }
 
-.footer {
+.main__bottom {
     position: relative;
     background: url("../img/decor/bg-footer.png") 50% 100% / cover no-repeat;
     /* width: 100%; */
 }
 
-.footer__head-inner {
+.main__bottom-inner {
     /* width: 1282px;
     height: 522px; */
     display: flex;
@@ -349,17 +351,17 @@
     padding-right: 204px;
 } */
 
-.footer__head-inner .cake {
+.main__bottom-inner .cake {
     /* max-width: 574px; */
 }
 
-.footer__form {
+.form {
     max-width: 420px;
     /* width: 100%; */
     margin-right: 204px;
 }
 
-.footer__title {
+.form-title {
     font-family: var(--second-family);
     font-size: 74px;
     line-height: .82;
@@ -367,7 +369,7 @@
     padding-bottom: 20px;
 }
 
-.footer__text {
+.form-text {
     padding-bottom: 20px;
 }
 
@@ -396,11 +398,139 @@
 } */
 
 
-.footer__button {
+.form__button {
     margin-top: 20px;
     /* max-width: 420px; */
 }
 
+/* ======================================= */
+/* ============footer====================== */
+.footer {
+    background: #ab8261;
+    padding: 60px 0 60px;
+    color: var(--color-bg-body);
+}
+
+.footer__inner {
+    display: grid;
+    gap: 40px 15px;
+    grid-template-columns: .9fr .9fr 1.1fr auto;
+}
+
+.footer__col:first-child {
+    margin-top: -30px;
+}
+
+.footer__logo {
+    display: block;
+    max-width: 240px;
+}
+
+.footer__logo img {
+    width: 100%;
+}
+
+.footer__logo-text {
+    margin-bottom: 20px;
+}
+
+.footer__col-list {
+    margin-top: -5px;
+}
+
+.footer__col-item {
+    margin-bottom: 10px;
+}
+
+.footer__col-item:last-child {
+    margin-bottom: 0;
+}
+
+.footer__col-link {
+    /* display: flex;
+    flex-direction: column;
+    gap: 20px; */
+
+    display: block;
+    padding: 5px 0;
+    position: relative;
+    z-index: 1;
+}
+
+.footer__col-link::before {
+    content: '';
+    position: absolute;
+    background: var(--color-ac-orange);
+    top: -8px;
+    left: -14px;
+    z-index: -1;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    transition: var(--transition);
+    opacity: 0;
+}
+
+.footer__col-link:hover::before {
+    opacity: 1
+}
+
+.footer__contact-item {
+    margin-bottom: 10px;
+}
+
+.footer__contact-item:last-child {
+    margin-bottom: 0;
+}
+
+.footer__col-tel {
+    margin-bottom: 47px;
+}
+
+.footer__col-number {
+    display: block;
+    font-weight: 500;
+    line-height: 1.6;
+    font-size: 24px;
+    transition: var(--transition);
+}
+
+.footer__col-number:hover {
+    color: var(--color-ac-orange);
+}
+
+.footer__col-copy {
+    color: #dec5b1
+}
+
+
+.socials {
+    line-height: 0;
+}
+
+.socials__list {
+    display: flex;
+    gap: 15px;
+}
+
+.socials__link path {
+    transition: var(--transition);
+}
+
+.socials__link:hover path {
+    /* background-color: var(--color-ac-orange); */
+    fill: var(--color-ac-orange);
+}
+
+
+
+
+
+
+
+
+/* ============================================================= */
+/* ============================================================= */
 /* ============================================================= */
 
 @media(max-width:1200px) {
@@ -413,6 +543,17 @@
         position: static;
         max-width: none;
         margin-top: 30px;
+    }
+
+    /* =========== */
+    .footer__inner {
+        justify-content: space-between;
+        grid-template: repeat(2, auto) / repeat(3, auto);
+    }
+
+    .footer__col:last-child{
+        grid-column: 1 / -1;
+        text-align: center;
     }
 }
 
@@ -429,7 +570,7 @@
         transform: translateY(-50%);
         opacity: 0;
         visibility: hidden;
-        transition: all, .4s;
+        transition: var(--transition);
     }
 
     .header__nav-list {
@@ -446,6 +587,27 @@
 
     .burger-icon {
         display: flex;
+    }
+
+
+    /* ========== */
+    .footer__inner {
+        justify-content: center;
+        grid-template: none;
+        text-align: center;
+        gap: 0;
+    }
+    .footer__col:first-child{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 40px;
+    }
+    .footer__col:nth-child(2){
+        margin-bottom: 40px;
+    }
+    .footer__col:nth-child(3){
+        margin-bottom: 10px;
     }
 
 }
